# CloudPwn

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: main.yml
cloudpwn/: main.py
cloudpwn/config/: settings.py
cloudpwn/providers/aws/: ec2.py  eks.py  enumerate.py  iam.py  rds.py  route53.py  s3.py  secret_manager.py  secrets_manager.py
docs/: mkdocs.yml
docs/docs/: index.md  installation.md  quickstart.md  usage.md
installation/: index.html
quickstart/: index.html
src/: main.py
src/config/: settings.py
src/providers/aws/: ec2.py  enumerate.py
usage/: index.html
